# ArisuAgentIntegration

./: .gitattributes  .gitignore  README.md  TODO.md  docker-compose.yml  requirements.txt  run.py  start.bat  start.sh
ai_core/: .gitignore  README.md  main.py  requirements.txt  template.py  webui.py
ai_core/admin/: __init__.py  log_viewer.py  routes.py
ai_core/config/: channels.example.json  expression.json  globals.example.json  inference.example.json  mcp_servers.example.json  providers.example.json  tools.json
bilibili/: .env.example  bilibiliconnection.py  webui.py
db/: init_db.py  seed_data.json
qq_bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
qq_bot/docs/: npc_event_system.md
qq_bot/emoji/: emojis.txt
qq_bot/logs/: channel.log.2026-06-19_164807  channel.log.2026-06-19_184611  channel.log.2026-06-19_190506  channel.log.2026-06-19_192032  channel.log.2026-06-19_192832  channel.log.2026-06-19_193920  channel.log.2026-06-19_194741  channel.log.2026-06-19_195243  channel.log.2026-06-19_200810
qq_bot/src/dao/: chat_history.py  dbengine.py  map.py  reminder.py  status.py  tomb.py  user.py
qq_bot/src/function/: function_call.py  functions.py  services.py
qq_bot/src/plugins/: chatglmOpenapi.py  dataset_collection.py  emaid.py  emotion.py  gradio_call.py  qwenOpenapi.py  reminder_scheduler.py  voice.py
qq_bot/src/skills/: code_running.py  context_params.py  game_development.py  git_service.py  hippocampus_client.py  image_process.py  interactive_sandbox.py  online_search.py  user_status.json
searxng/: settings.yml
(+129 files in other folders)
