[project]
name = "AliceBotQQ"
version = "0.1.0"
description = "AliceBotQQ"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[aiohttp,fastapi,httpx,websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-heweather>=0.9.0",
    "apscheduler>=3.0",
]

[tool.nonebot]
plugin_dirs = ["src/plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-heweather = ["nonebot_plugin_heweather"]
